Renamed ipynb file, added written analysis in README and ipynb file.

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -6,13 +6,16 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "- Your analysis here\n",
-    "---"
+    "Based on the data, the highest passing schools are charter schools with less than 2000 students.\n",
+    "- Charter schools outperform District schools significantly with an average passing rate of 90.43% vs 53.67%\n",
+    "- Cabrera High School has the highest overall passing rate of 91.33%\n",
+    "- Data shows that budget per student doesn't affect passing rate\n",
+    "- Large schools (2000-5000) significantly underperform middle (1000-2000) and small schools (<1000) with 58.28% overall passing rate vs 90.62%, 89.88% respectively\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +143,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 193,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,51 +184,51 @@
        "15"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total number of unique schools\n",
-    "school_count = school_data[\"school_name\"].count()\n",
+    "school_count = len(school_data_complete[\"school_name\"].unique())\n",
     "school_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39170"
+       "np.int64(39170)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total number of students\n",
-    "student_count = student_data[\"student_name\"].count()\n",
+    "student_count = student_data[\"Student ID\"].count()\n",
     "student_count\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24649428"
+       "np.int64(24649428)"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "78.98537145774827"
+       "np.float64(78.98537145774827)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "81.87784018381414"
+       "np.float64(81.87784018381414)"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74.9808526933878"
+       "np.float64(74.9808526933878)"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,10 +321,10 @@
     {
      "data": {
       "text/plain": [
-       "85.80546336482001"
+       "np.float64(85.80546336482001)"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,16 +339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "65.17232575950983"
+       "np.float64(65.17232575950983)"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +422,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +477,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +515,7 @@
        "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +553,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +592,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +631,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +670,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +750,7 @@
        "Griffin High School   1330"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1087,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1269,7 +1272,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 212,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1438,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 213,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1625,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1827,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2017,7 +2020,7 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 217,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2030,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2374,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 218,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2387,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2500,7 +2503,7 @@
        "<$585                                  90.369459  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2529,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2540,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2686,7 +2689,7 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2699,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3040,7 +3043,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3056,7 +3059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3070,7 +3073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -3154,7 +3157,7 @@
        "Small (<1000)               96.099437          89.883853  "
       ]
      },
-     "execution_count": 225,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3184,7 +3187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3198,7 +3201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3270,7 +3273,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3318,7 +3321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
